# supercomputers

./: .gitignore  CMakeLists.txt  README.md
code_templates/: 1.1-matmul.cpp  1.3-eigenvector.cpp  2.1a-maxwell.cpp  2.1b-pi_integ.cpp  2.2b-fermi_pasta_ulam_chain.cpp  2.3a-montecarlo_pi.cpp  3.1-newton_omp.cpp  3.2-quadratic.cpp
hw_1/: main.cpp  variant4_template.cpp
hw_2/: 1.2-wave_1d.cpp  1.4-poisson_1d_cg.cpp  2.1b-pi_integ.cpp  2.2a-buffon_pi.cpp  2.3b-fourier.cpp  3.1-newton_omp.cpp
input/: 100_5_random.txt  10_3_random.txt  200_5_random.txt  300_5_random.txt  400_5_random.txt
python/: create_input.py  hw_1.py  plot_results.py
sbatch/: hw_1.sbatch  hw_1_python.sbatch  hw_2_1.2.sbatch  hw_2_2.1b.sbatch  hw_2_2.2a.sbatch
vectors_and_matrices/: array_types.hpp
